# Crab

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CRAB_EDGE_SERVER_SECURITY_REVIEW.md  Cargo.toml  deny.toml  launch-checklist.typ
crab-auth/: CLAUDE.md  Cargo.toml  Dockerfile.lambda
crab-auth/examples/: gen_hash.rs
crab-auth/migrations/: 0001_activations.sql  0002_p12_certificates.sql  0003_client_connections.sql
crab-auth/src/: api.rs  config.rs  main.rs  state.rs
crab-auth/src/api/: activate.rs  activate_client.rs  binding.rs  deactivate.rs  deactivate_client.rs  mod.rs  p12.rs  pki.rs  subscription.rs  verify.rs
crab-auth/src/db/: activations.rs  client_connections.rs  mod.rs  p12.rs  subscriptions.rs  tenants.rs
crab-cert/: AGENTS.md  CLAUDE.md  Cargo.toml
crab-cert/certs/: root_ca.pem  root_key.pem
crab-cert/examples/: gen_cloud_certs.rs  mtls_demo.rs
crab-cert/src/: adapter.rs  ca.rs  credential.rs  crypto.rs  error.rs  lib.rs  machine.rs  metadata.rs  p12.rs  profile.rs  server.rs  signer.rs  trust.rs
crab-cert/tests/: crypto_ops.rs  full_flow.rs  pki_hierarchy.rs
crab-client/: CLAUDE.md  Cargo.toml  README.md
crab-client/examples/: message_client.rs  remote_client.rs  remote_message.rs
crab-client/src/: client.rs  config.rs  error.rs  http.rs  lib.rs  request_response.rs  types.rs
crab-client/src/cert/: credential.rs  manager.rs  mod.rs
crab-client/src/client/: builder.rs  common.rs  crab_client.rs  http.rs  http_oneshot.rs  local.rs  message.rs  mod.rs  remote.rs
crab-client/src/message/: client.rs  mod.rs  transport.rs
crab-client/tests/: cert_cache_performance.rs  client_integration.rs
crab-cloud/: CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile
crab-cloud/examples/: gen_hash.rs
crab-cloud/migrations/: 0001_initial.down.sql  0001_initial.up.sql  0002_add_store_metadata.up.sql  0002_catalog_normalized.down.sql  0002_catalog_normalized.up.sql  0002_daily_report_simplify.down.sql  0002_daily_report_simplify.up.sql  0002_drop_cloud_active_orders.down.sql  0002_drop_cloud_active_orders.up.sql  0002_move_ca_p12_to_pg.down.sql  0002_move_ca_p12_to_pg.up.sql  0002_optimization_indexes.down.sql  0002_optimization_indexes.up.sql  0002_simplify_order_storage.down.sql  0002_simplify_order_storage.up.sql  0002_store_management.down.sql  0002_store_management.up.sql  0002_tenants.down.sql  0002_tenants.up.sql  0003_credit_notes.down.sql  0003_credit_notes.up.sql  0003_mg_discount_fields.down.sql  0003_mg_discount_fields.up.sql  0003_order_detail_sync.down.sql  0003_order_detail_sync.up.sql  0003_shift_breakdown.down.sql  0003_shift_breakdown.up.sql  0003_store_anulaciones.down.sql  0003_store_anulaciones.up.sql  0003_webhook_idempotency.down.sql  0003_webhook_idempotency.up.sql  0003_zones_tables.down.sql  0003_zones_tables.up.sql  0004_audit_log.down.sql  0004_audit_log.up.sql  0004_fix_integer_types.down.sql  0004_fix_integer_types.up.sql  0004_invoice_upgrade.down.sql  0004_invoice_upgrade.up.sql  0004_order_item_product_id.down.sql  (+48 more)
crab-cloud/src/: config.rs  crypto.rs  error.rs  main.rs  state.rs  util.rs
crab-cloud/src/api/: catalog.rs  console_ws.rs  health.rs  image.rs  mod.rs  register.rs  stripe_webhook.rs  sync.rs  tenant.rs  update.rs  ws.rs
crab-cloud/src/auth/: edge_auth.rs  mod.rs  quota.rs  rate_limit.rs  tenant_auth.rs
crab-cloud/src/db/: activations.rs  audit.rs  catalog.rs  catalog_templates.rs  client_connections.rs  commands.rs  email_verifications.rs  mod.rs  p12.rs  refresh_tokens.rs  subscriptions.rs  sync_store.rs  tenant_images.rs  tenant_queries.rs  tenants.rs
crab-cloud/src/email/: mod.rs
crab-cloud/src/live/: mod.rs
crab-cloud/src/services/: rpc.rs
crab-cloud/src/stripe/: mod.rs
crab-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crab-desktop/src-tauri/src/: lib.rs  main.rs
crab-printer/: CLAUDE.md  Cargo.toml
crab-printer/src/: encoding.rs  error.rs  escpos.rs  label.rs  lib.rs  printer.rs
edge-server/: .env.example  .gitignore  000009.sst  ACID_DESIGN.md  AGENTS.md  CLAUDE.md  Cargo.toml  IDENTITY  MANIFEST-000005  MESSAGE_BUS_GUIDE.md
edge-server/docs/plans/: 2026-01-22-serverstate-refactor.md  2026-01-23-catalog-service-design.md  2026-01-23-catalog-service-migration.md
edge-server/examples/: interactive_demo.rs  local_client.rs
edge-server/migrations/: 0001_drop_label_field_data_key.down.sql  0001_drop_label_field_data_key.up.sql  0001_initial.sql  0002_add_order_key.sql  0002_archived_order_queue_number.sql  0002_archived_order_upgrade_fields.sql  0002_marketing_groups.sql  0002_seed.sql  0003_archived_item_category_id.sql  0003_chain_entry.down.sql  0003_chain_entry.up.sql  0003_indexes.sql  0003_print_config_global_toggles.sql  0003_shift_breakdown.sql  0004_credit_note.down.sql  0004_credit_note.up.sql  0004_member_enhancements.sql  0004_name_field_cleanup.sql  0004_unique_archived_item_instance.sql  0005_daily_report_simplify.sql  0005_invoice.down.sql  0005_invoice.up.sql  0005_printer_model_redesign.sql  0006_invoice_anulacion.down.sql  0006_invoice_anulacion.up.sql  0006_normalize_service_type.sql  0007_invoice_upgrade.down.sql  0007_invoice_upgrade.up.sql  0007_mg_discount_archival.sql  0008_order_applied_rules.sql  0008_order_service_type.down.sql  0008_order_service_type.up.sql  0009_store_info_i18n.down.sql  0009_store_info_i18n.up.sql  0010_receipt_locale.down.sql  0010_receipt_locale.up.sql
edge-server/migrations/migrations/: 20260109_181812_setup.surql  20260114_120000_audit_log.surql  20260114_130000_edge_activation.surql
edge-server/migrations/schemas/: archive_verification.surql  attribute.surql  audit_log.surql  category.surql  daily_report.surql  employee.surql  (+20 more)
edge-server/src/: client.rs  daily_reports.rs  lib.rs  main.rs  order_sync.rs  shifts.rs
edge-server/tests/: client_disconnect.rs  order_stress_test.rs  surreal_limit_bug.rs
red_coral/src-tauri/: Cargo.toml  tauri.conf.json
shared/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
shared/src/: activation.rs  app_state.rs  client.rs  error.rs  lib.rs  request.rs  response.rs  types.rs  util.rs
(+1715 files in other folders)
