[workspace]
resolver = "2"
members = [
    "edge-server",
    "shared",
    "crab-client",
    "crab-cert",
    "crab-desktop/src-tauri",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Shared workspace crates
shared = { path = "shared" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP and Web
http = "1"
axum = { version = "0.8", features = ["json"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Database
surrealdb = { version = "2.4.1", features = ["kv-rocksdb"] }
surrealdb-migrations = "2.4.0"

# Other utilities
dotenv = "0.15"
socketioxide = "0.18"
http-body-util = "0.1"
mime_guess = "2.0"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
include_dir = "0.7"
symlink = "0.1"
tempfile = "3.12"
