[workspace]
resolver = "2"
members = [
    "edge-server",
    "shared",
    "crab-client",
    "crab-cert",
    "crab-auth",
    "crab-auth-mock",
    "crab-cloud",
    "crab-printer",
    "red_coral/src-tauri",
]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"

# ========== Release Profile Optimization ==========
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[workspace.dependencies]
# ========== Workspace Crates ==========
shared = { path = "shared" }
crab-cert = { path = "crab-cert" }
crab-client = { path = "crab-client" }
crab-printer = { path = "crab-printer" }
edge-server = { path = "edge-server" }

# ========== Encoding ==========
encoding_rs = "0.8"

# ========== Serialization ==========
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ========== Error Handling ==========
thiserror = "2"

# ========== HTTP and Web ==========
http = "1"
axum = { version = "0.8", features = ["json", "multipart"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "timeout", "limit"] }

# ========== HTTP Client ==========
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# ========== TLS (aws-lc-rs backend) ==========
aws-lc-rs = "1"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-pki-types = "1"
rustls-webpki = "0.103"

# ========== Async Runtime ==========
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# ========== Time and UUID ==========
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros"] }

# ========== Cryptography ==========
sha2 = "0.10"
hex = "0.4"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10.2", default-features = false, features = ["rust_crypto"] }
ring = "0.17"
rsa = "0.9"
rand = "0.8"

# ========== Certificate ==========
rcgen = "0.14"
x509-parser = "0.18"
pem = "3.0"
p12-keystore = "0.3.0-rc2"
openssl = "0.10"

# ========== Logging and Tracing ==========
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# ========== Database ==========
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "postgres", "macros", "migrate", "json"] }
redb = "3.0"

# ========== Decimal Precision ==========
rust_decimal = "1.37"

# ========== Utilities ==========
dotenvy = "0.15"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
sysinfo = "0.37"
base64 = "0.22"

# ========== AWS SDK ==========
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-kms = "1"
aws-sdk-secretsmanager = "1"
lambda_http = "1"

# ========== HTTPS Server ==========
axum-server = { version = "0.8", features = ["tls-rustls"] }
