[package]
name = "crab-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crab-cert = { path = "../crab-cert" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
base64 = "0.22"
jsonwebtoken.workspace = true
chrono.workspace = true
