[package]
name = "crab-auth"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace crates
crab-cert.workspace = true

# Web framework
axum.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# JWT and Auth
jsonwebtoken.workspace = true

# Time and UUID
chrono.workspace = true
uuid = { workspace = true, features = ["v4"] }

# Encoding
base64.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
