[package]
name = "crab-auth"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Workspace crates
crab-cert.workspace = true
shared.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx = { workspace = true, features = ["postgres"] }

# Cryptography
argon2.workspace = true
base64.workspace = true

# Time and UUID
chrono.workspace = true
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# AWS
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-kms.workspace = true
aws-sdk-secretsmanager.workspace = true
lambda_http.workspace = true

# Utilities
dotenvy.workspace = true
