[package]
name = "crab-cert"
version = "0.1.0"
edition = "2024"

[dependencies]
rcgen = "0.14.6"
rustls = "0.23"
x509-parser = "0.18"
pem = "3.0"
thiserror = "2"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
rsa = "0.9"
rand = "0.8"
sysinfo = "0.37.2"
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
