[package]
name = "crab-cert"
version.workspace = true
edition.workspace = true

[dependencies]
# Certificate generation
rcgen.workspace = true
x509-parser.workspace = true
pem.workspace = true

# TLS
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
rustls-webpki.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
ring.workspace = true
rsa.workspace = true
rand.workspace = true

# Utilities
time.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sysinfo.workspace = true

# Serialization and time
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Encoding
base64.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
