[package]
name = "crab-client"
version.workspace = true
edition.workspace = true

[dependencies]
# Shared types
shared.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["rustls-tls"] }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP types
http.workspace = true
axum.workspace = true

# Async trait for defining traits
async-trait.workspace = true

# UUID
uuid.workspace = true

# TLS support
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rustls-pki-types = "1"
webpki-roots = "1.0.5"
rustls-pemfile = "2"

# Tracing
tracing = "0.1"

# Other utilities
crab-cert = { path = "../crab-cert" }

[[example]]
name = "message_client"
path = "examples/message_client.rs"

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[dev-dependencies.tracing]
version = "0.1"

[dev-dependencies.chrono]
version = "0.4"

[dev-dependencies.rustls]
version = "0.23.36"
features = ["ring"]

[dev-dependencies.rustls-pki-types]
version = "1"

[dev-dependencies.tokio-rustls]
version = "0.26.4"

[dev-dependencies.base64]
version = "0.22"

[dev-dependencies.sha2]
version = "0.10"

[dev-dependencies.hex]
version = "0.4"

[dev-dependencies.rustls-pemfile]
version = "2"

[dev-dependencies.rustls-webpki]
version = "0.103.8"

[dev-dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-input = "0.11.0"
tui-logger = { version = "0.14.3", features = ["tracing-support"] }
log = "0.4"
