[package]
name = "crab-client"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace crates
shared.workspace = true
crab-cert.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["rustls-tls"] }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP types
http.workspace = true
axum.workspace = true

# UUID
uuid.workspace = true

# TLS
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true

# Logging
tracing.workspace = true

# Cryptography
sha2.workspace = true

[[example]]
name = "message_client"
path = "examples/message_client.rs"

[dev-dependencies]
# Logging
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
base64.workspace = true
rustls-webpki.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true
tui-logger.workspace = true
log.workspace = true
