[package]
name = "crab-client"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
in-process = ["tower"]

[dependencies]
# Tower (optional, for in-process client)
tower = { workspace = true, optional = true }
# Workspace crates
shared.workspace = true
crab-cert.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["rustls-tls"] }

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# HTTP types
http.workspace = true
axum.workspace = true

# UUID
uuid.workspace = true

# TLS (aws-lc-rs backend)
aws-lc-rs.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-pemfile.workspace = true

# Logging
tracing.workspace = true

# Cryptography
sha2.workspace = true

# Time
time.workspace = true

[[example]]
name = "remote_message"
path = "examples/remote_message.rs"

[dev-dependencies]
# Logging
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
base64.workspace = true
rustls-webpki.workspace = true

# Testing
tempfile.workspace = true
