[package]
name = "crab-printer"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Encoding
encoding_rs = { workspace = true }

# Image processing (optional, for logo printing)
image = { workspace = true, optional = true }

# Async runtime
tokio.workspace = true

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Printing",
    "Win32_Foundation",
] }

[features]
default = ["image"]
image = ["dep:image"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
