[package]
name = "crab-printer"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Encoding
encoding_rs = { workspace = true }

# Image processing (optional, for logo printing)
image = { workspace = true, optional = true }

# Async runtime
tokio.workspace = true

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization (for label template)
serde = { workspace = true }
serde_json = { workspace = true }

# Base64 decoding (for label image data)
base64 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Printing",
    "Win32_Storage_Xps",
] }

[features]
default = ["image"]
image = ["dep:image"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
