[package]
name = "edge-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace crates
shared.workspace = true
crab-cert.workspace = true

# Web framework
axum = { workspace = true, features = ["multipart"] }
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Database
surrealdb.workspace = true
surrealdb-migrations.workspace = true
redb.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# JWT and Authentication
jsonwebtoken.workspace = true
argon2.workspace = true

# HTTP types
http.workspace = true
hyper.workspace = true

# Time and UUID
chrono.workspace = true
uuid.workspace = true
time.workspace = true

# WebSocket
socketioxide.workspace = true

# Validation
validator.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
ring.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP Client
reqwest.workspace = true

# TLS
rustls.workspace = true
tokio-rustls.workspace = true

# Image processing
image.workspace = true
mime_guess.workspace = true

# Other utilities
dotenv.workspace = true
enum_dispatch.workspace = true
include_dir.workspace = true
symlink.workspace = true
dashmap.workspace = true

[dev-dependencies]
# Testing
tempfile.workspace = true
crab-client = { workspace = true, features = ["in-process"] }

# TUI
ratatui.workspace = true
crossterm.workspace = true
tui-input.workspace = true
tui-logger.workspace = true
log.workspace = true
tracing-subscriber.workspace = true
