[package]
name = "edge-server"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Workspace crates
shared = { workspace = true, features = ["db"] }
crab-cert.workspace = true
crab-printer.workspace = true

# Web framework
axum = { workspace = true, features = ["multipart"] }
axum-server.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Database
sqlx.workspace = true
redb.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Error handling
thiserror.workspace = true

# JWT and Authentication
jsonwebtoken.workspace = true
argon2.workspace = true

# HTTP types
http.workspace = true

# Time and UUID
chrono.workspace = true
chrono-tz.workspace = true
uuid.workspace = true
time.workspace = true

# Cryptography
sha2.workspace = true
hex.workspace = true
ring.workspace = true

# Decimal precision
rust_decimal.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP Client
reqwest.workspace = true

# TLS / WebSocket
rustls.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
rustls-pemfile.workspace = true

# Image processing
image.workspace = true

# Archive
zip.workspace = true

# Other utilities
dotenvy.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

[dev-dependencies]
# Testing
tempfile.workspace = true
crab-client = { workspace = true, features = ["in-process"] }
