[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
# HTTP types
http.workspace = true
axum.workspace = true
hyper.workspace = true
http-body-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Validation
validator.workspace = true
