[package]
name = "shared"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
# Workspace crates
crab-cert.workspace = true

# HTTP types
http.workspace = true
axum.workspace = true
hyper.workspace = true
http-body-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Encoding
base64.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Validation
validator.workspace = true

# Logging
tracing.workspace = true
