[package]
name = "shared"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
# Workspace crates
crab-cert.workspace = true

# HTTP types
http.workspace = true
axum.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Encoding
base64.workspace = true

# Error handling
thiserror.workspace = true

# Random (snowflake ID generation)
rand.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

# Logging
tracing.workspace = true

# Decimal
rust_decimal = { workspace = true, features = ["serde-with-float"] }

# Database (optional, feature-gated)
sqlx = { workspace = true, features = ["derive"], optional = true }

[features]
db = ["sqlx"]
