[package]
name = "crab-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "crab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Added dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1"
axum = "0.8"

# Workspace dependencies
edge-server = { path = "../../edge-server" }
shared = { path = "../../shared" }
crab-client = { path = "../../crab-client" }
local-ip-address = "0.6.8"
zip = "7.0.0"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
