[package]
name = "red-coral"
version = "0.1.0"
description = "RedCoral POS - A Tauri App"
authors = ["you"]
publish = false
edition = "2021"
rust-version = "1.77.2"

[features]
default = []

[lib]
name = "red_coral_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "red-coral"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# ========== Workspace Crates ==========
shared.workspace = true
crab-client = { workspace = true, features = ["in-process"] }
crab-cert.workspace = true
crab-printer.workspace = true
edge-server.workspace = true

# ========== Tauri ==========
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# ========== Serialization (workspace) ==========
serde.workspace = true
serde_json.workspace = true

# ========== Error Handling (workspace) ==========
thiserror.workspace = true

# ========== Async Runtime (workspace) ==========
tokio.workspace = true
tokio-util.workspace = true

# ========== Time and UUID (workspace) ==========
chrono.workspace = true
time.workspace = true
uuid.workspace = true

# ========== Cryptography (workspace) ==========
argon2.workspace = true
sha2.workspace = true

# ========== Logging (workspace) ==========
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# ========== HTTP Client (workspace) ==========
reqwest.workspace = true

# ========== TLS (workspace) ==========
rustls.workspace = true

# ========== Utilities (workspace) ==========
image.workspace = true
base64.workspace = true
hex.workspace = true

# ========== Red Coral Specific ==========
zip = "6.0.0"
urlencoding = "2.1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_Foundation",
    "Win32_Storage_Xps",
] }
